<?xml version="1.0"?>
<package format="3">
  <name>odom_transform</name>
  <version>0.0.0</version>
  <description>pose in imu frame to body frame transform</description>

  <author email="yangzhou@nyu.edu">Yang Zhou</author>
  <maintainer email="yangzhou@nyu.edu">Yang Zhou</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <build_depend>nodelet</build_depend>
  <exec_depend>nodelet</exec_depend>

    <!-- <export>
        <nodelet plugin="${prefix}/transform_nodelet.xml" />
    </export> -->
</package>
