<?xml version="1.0"?>
<package format="3">
  <name>odom_transform</name>
  <version>0.0.0</version>
  <description>pose in imu frame to body frame transform</description>

  <author email="cw4030@nyu.edu">Chenyu</author>
  <maintainer email="cw4030@nyu.edu">Chenyu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <build_depend>nodelet</build_depend>
  <exec_depend>nodelet</exec_depend>

    <export>
        <nodelet plugin="${prefix}/transform_nodelet.xml" />
    </export>
</package>

